--- a/250120.html
+++ b/250120.html
@@ -7,6 +7,10 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png" />
     <link rel="manifest" href="./site.webmanifest" />
 
+    <meta property="og:title" content="귀여운 고양이">
+    <meta property="og:description" content="귀여운 고양이입니다.">
+    <meta property="og:image" content="https://ifh.cc/v-4t273Y">
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
