--- a/250120.html
+++ b/250120.html
@@ -3,7 +3,7 @@
   <head>
     <meta property="og:title" content="귀여운 고양이">
     <meta property="og:description" content="귀여운 고양이입니다.">
-    <meta property="og:image" content="https://ifh.cc/g/4t273Y.jpg">
+    <meta property="og:image" content="https://ifh.cc/v-4t273Y">
     <link rel="icon" type="image/png" href="./favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <link rel="shortcut icon" href="./favicon.ico" />
