--- a/250120.html
+++ b/250120.html
@@ -3,7 +3,7 @@
   <head>
     <meta property="og:title" content="냠냠">
     <meta property="og:description" content="냠냠">
-    <meta property="og:image" content="https://ifh.cc/v-3DRwO3">
+    <meta property="og:image" content="https://ifh.cc/g/3DRwO3.jpg">
     <link rel="icon" type="image/png" href="./favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <link rel="shortcut icon" href="./favicon.ico" />
